<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mine.autoshine.MainActivity"
    tools:ignore="LabelFor">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_service_state"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:text="@string/starting_service"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_start_stop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/stop" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="10dp"
        android:background="#808080" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="5dp"
            android:paddingBottom="12dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_get_state"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_data" />

            <Button
                android:id="@+id/btn_expand"
                android:layout_width="fill_parent"
                android:layout_height="34sp"
                android:layout_marginTop="5dp"
                android:text="@string/show_config"
                android:textSize="11sp" />

            <LinearLayout
                android:id="@+id/ll_hidden_settings"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1 &gt;"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12sp"
                        android:text="@string/sensor_c" />

                    <EditText
                        android:id="@+id/et_sensor_value_1"
                        android:layout_width="75sp"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:singleLine="true"
                        android:text="" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12sp"
                        android:text="@string/brightness_c" />

                    <EditText
                        android:id="@+id/et_brightness_value_1"
                        android:layout_width="75sp"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:singleLine="true"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2 &gt;"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12sp"
                        android:text="@string/sensor_c" />

                    <EditText
                        android:id="@+id/et_sensor_value_2"
                        android:layout_width="75sp"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:singleLine="true"
                        android:text="" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12sp"
                        android:text="@string/brightness_c" />

                    <EditText
                        android:id="@+id/et_brightness_value_2"
                        android:layout_width="75sp"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:singleLine="true"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3 &gt;"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12sp"
                        android:text="@string/sensor_c" />

                    <EditText
                        android:id="@+id/et_sensor_value_3"
                        android:layout_width="75sp"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:singleLine="true"
                        android:text="" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12sp"
                        android:text="@string/brightness_c" />

                    <EditText
                        android:id="@+id/et_brightness_value_3"
                        android:layout_width="75sp"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:singleLine="true"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4 &gt;"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12sp"
                        android:text="@string/sensor_c" />

                    <EditText
                        android:id="@+id/et_sensor_value_4"
                        android:layout_width="75sp"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:singleLine="true"
                        android:text="" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12sp"
                        android:text="@string/brightness_c" />

                    <EditText
                        android:id="@+id/et_brightness_value_4"
                        android:layout_width="75sp"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:singleLine="true"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_save_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save_settings" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dip"
                        android:layout_marginTop="10dp"
                        android:background="#808080" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/battery_optimizations" />

                    <LinearLayout
                        android:id="@+id/ll_ignore_battery_request"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/set_battery" />

                        <Button
                            android:id="@+id/btn_request"
                            android:layout_width="wrap_content"
                            android:layout_height="36sp"
                            android:layout_weight="0"
                            android:text="@string/request"
                            android:textSize="11sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/if_not_work" />

                    <TextView
                        android:id="@+id/tv_dontkillmyapp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/dontkillmyapp_link" />

                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginTop="10dp"
                    android:background="#808080" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/work_mode_c"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rg_work_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_work_always"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_always" />

                <RadioButton
                    android:id="@+id/rb_work_portrait"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_portrait" />

                <RadioButton
                    android:id="@+id/rb_work_landscape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_landscape" />

                <RadioButton
                    android:id="@+id/rb_work_unlock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_unlock" />
            </RadioGroup>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
